# Scroll_Sepolia_Testnet

./: Cargo.toml  README.md
Config/: Config.toml
abi/: token_gho.json  uniswap.json
src/: constants.rs  main.rs
src/utils/: captcha_solver.rs  config.rs  error.rs  faucet.rs  mod.rs  scroll.rs
